--- a/App/Admin/View/Index/index.html
+++ b/App/Admin/View/Index/index.html
@@ -70,7 +70,7 @@
                                 <a class="J_menuItem" href="index_v2.html">主页示例二</a>
                             </li>
                             <li>
-                                <a class="J_menuItem" href="index_v3.html">主页示例三</a>
+                                <a class="J_menuItem" href="info.html">主页示例三</a>
                             </li>
                             <li>
                                 <a class="J_menuItem" href="index_v4.html">主页示例四</a>
@@ -498,7 +498,7 @@
                 <a href="login.html" class="roll-nav roll-right J_tabExit"><i class="fa fa fa-sign-out"></i> 退出</a>
             </div>
             <div class="row J_mainContent" id="content-main">
-                <iframe class="J_iframe" name="iframe0" width="100%" height="100%" src="index_v1.html?v=4.0" frameborder="0" data-id="index_v1.html" seamless></iframe>
+                <iframe class="J_iframe" name="iframe0" width="100%" height="100%" src="{:U('/index/info')}?v=4.0" frameborder="0" data-id="index_v1.html" seamless></iframe>
             </div>
             <div class="footer">
                 <div class="pull-right">&copy; 2014-2015 <a href="http://www.zi-han.net/" target="_blank">zihan's blog</a>
