--- a/App/Admin/View/Index/index.html
+++ b/App/Admin/View/Index/index.html
@@ -49,7 +49,7 @@
                                 <li><a class="J_menuItem" href="mailbox.html">信箱</a>
                                 </li>
                                 <li class="divider"></li>
-                                <li><a href="login.html">安全退出</a>
+                                <li><a href="{:U('Login/index')}">安全退出</a>
                                 </li>
                             </ul>
                         </div>
@@ -495,7 +495,7 @@
                         </li>
                     </ul>
                 </div>
-                <a href="login.html" class="roll-nav roll-right J_tabExit"><i class="fa fa fa-sign-out"></i> 退出</a>
+                <a href="{:U('Login/index')}" class="roll-nav roll-right J_tabExit"><i class="fa fa fa-sign-out"></i> 退出</a>
             </div>
             <div class="row J_mainContent" id="content-main">
                 <iframe class="J_iframe" name="iframe0" width="100%" height="100%" src="{:U('/index/info')}?v=4.0" frameborder="0" data-id="index_v1.html" seamless></iframe>
