--- a/App/Admin/View/Index/index.html
+++ b/App/Admin/View/Index/index.html
@@ -57,32 +57,28 @@
                         </div>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="{:U('Index/index')}">
                             <i class="fa fa-home"></i>
-                            <span class="nav-label">主页</span>
+                            <span class="nav-label">后台首页</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="J_menuItem">
+                            <i class="fa fa-magic"></i>
+                            <span class="nav-label">系统设置</span>
                             <span class="fa arrow"></span>
                         </a>
                         <ul class="nav nav-second-level">
                             <li>
-                                <a class="J_menuItem" href="index_v1.html" data-index="0">主页示例一</a>
-                            </li>
-                            <li>
-                                <a class="J_menuItem" href="index_v2.html">主页示例二</a>
-                            </li>
-                            <li>
-                                <a class="J_menuItem" href="info.html">主页示例三</a>
-                            </li>
-                            <li>
-                                <a class="J_menuItem" href="index_v4.html">主页示例四</a>
-                            </li>
-                            <li>
-                                <a href="index_v5.html" target="_blank">主页示例五</a>
+                                <a class="J_menuItem" href="{:U('Menu/index')}">菜单管理</a>
                             </li>
                         </ul>
-
                     </li>
                     <li>
-                        <a class="J_menuItem" href="layouts.html"><i class="fa fa-columns"></i> <span class="nav-label">布局</span></a>
+                        <a class="J_menuItem" href="layouts.html">
+                            <i class="fa fa-columns"></i>
+                            <span class="nav-label">布局</span>
+                        </a>
                     </li>
                     <li>
                         <a href="#">
