树形结构已经勉强OK。还有就是分页功能需要添加，后续再添加

--- a/App/Admin/View/Index/index.html
+++ b/App/Admin/View/Index/index.html
@@ -497,7 +497,7 @@
                 <iframe class="J_iframe" name="iframe0" width="100%" height="100%" src="{:U('/index/info')}" frameborder="0" data-id="index_v1.html" seamless></iframe>
             </div>
             <div class="footer">
-                <div class="pull-right">&copy; 2014-2015 <a href="http://www.zi-han.net/" target="_blank">zihan's blog</a>
+                <div class="pull-right">&copy; 2014-2015 <a href="http://www.hnqz178.com/" target="_blank">湖南群智信息科技有限公司</a>
                 </div>
             </div>
         </div>
