--- a/App/Admin/View/Menu/index.html
+++ b/App/Admin/View/Menu/index.html
@@ -57,6 +57,7 @@
 <script src="__PUBLIC__/js/plugins/jqgrid/i18n/grid.locale-cn.js?0820"></script>
 <script src="__PUBLIC__/js/plugins/jqgrid/jquery.jqGrid.min.js?0820"></script>
 <script src="__PUBLIC__/js/content.min.js?v=1.0.0"></script>
+<script src="__PUBLIC__/js/admin/common.js"></script>
 <script>
     $(document).ready(function () {
         $.jgrid.defaults.styleUI = "Bootstrap";
