--- a/App/Admin/View/Menu/add.html
+++ b/App/Admin/View/Menu/add.html
@@ -30,16 +30,16 @@
                     </h5>
                 </div>
                 <div class="ibox-content">
-                    <form method="get" class="form-horizontal">
+                    <form class="form-horizontal" id="submit-menu">
                         <div class="form-group">
                             <label class="col-sm-2 control-label">父级菜单</label>
 
                             <div class="col-sm-10">
                                 <select class="form-control m-b" id="parentName" name="pid">
-                                    <option>选项 1</option>
-                                    <option>选项 2</option>
-                                    <option>选项 3</option>
-                                    <option>选项 4</option>
+                                    <option value="0">顶级菜单</option>
+                                    <foreach name="menuName" item="v">
+                                        <option value="{$v.id}">{$v.name}</option>
+                                    </foreach>
                                 </select>
                             </div>
                         </div>
@@ -104,8 +104,8 @@
                         <div class="hr-line-dashed"></div>
                         <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
-                                <button class="btn btn-primary" type="button">保存内容</button>
-                                <button class="btn btn-white" type="button" onclick="">取消返回</button>
+                                <button class="btn btn-primary" type="button" id="button-add">保存内容</button>
+                                <button class="btn btn-white" type="button" id="button-cancal">取消返回</button>
                             </div>
                         </div>
                     </form>
@@ -119,11 +119,36 @@
 <script src="__PUBLIC__/js/bootstrap.min.js?v=3.3.6"></script>
 <script src="__PUBLIC__/js/content.min.js?v=1.0.0"></script>
 <script src="__PUBLIC__/js/plugins/iCheck/icheck.min.js"></script>
-<script src="__PUBLIC__/js/admin/common.js"></script>
+<!--<script src="__PUBLIC__/js/admin/common.js"></script>-->
+<script src="__PUBLIC__/js/dialog.js"></script>
+<script src="__PUBLIC__/js/plugins/layer/layer.min.js"></script>
 <script>
     $(document).ready(function () {
         $(".i-checks").iCheck({checkboxClass: "icheckbox_square-green", radioClass: "iradio_square-green",})
     });
+    $("#button-add").click(function () {
+        var data = $("#submit-menu").serializeArray();
+        postData = {};
+
+        $(data).each(function (i) {
+            postData[this.name] = this.value;
+        })
+        console.log(postData);
+        //将获取到德数据post给服务器
+        url = '{:U("Menu/add")}';
+        $.post(url,postData,function (result) {
+            if(result.status == 1){
+                //成功
+                return dialog.success(result.message,result.url);
+            }else if(result.status == 0){
+                //失败
+                return dialog.error(result.message);
+            }
+        },"JSON");
+    });
+    $("#button-cancal").click(function () {
+       window.location.href = '{:U("Menu/index")}'
+    })
 </script>
 </body>
 
