--- a/App/Admin/View/Menu/index.html
+++ b/App/Admin/View/Menu/index.html
@@ -66,7 +66,7 @@
                             <foreach name='cate' item='v'>
                                 <tr>
                                     <td>
-                                        <input type="checkbox" class="i-checks" name="input[]">
+                                        <!--<input type="checkbox" class="i-checks" name="input[]">-->
                                     </td>
                                     <td>{$v.id}</td>
                                     <td class="aleft">{$v.delimiter}
