--- a/App/Admin/View/Menu/edit.html
+++ b/App/Admin/View/Menu/edit.html
@@ -38,7 +38,7 @@
                                 <select class="form-control m-b" id="parentName" name="pid">
                                     <option value="0">顶级菜单</option>
                                     <foreach name="cate" item="v">
-                                        <option value="{$v.id}" <if condition="$pid eq $v['id']">selected="selected"</if>>{$v.delimiter}{$v.name}</option>
+                                        <option value="{$v.id}" <if condition="$data['pid'] eq $v['id']">selected="selected"</if>>{$v.delimiter}{$v.name}</option>
                                     </foreach>
                                 </select>
                             </div>
@@ -48,7 +48,7 @@
                             <label class="col-sm-2 control-label">菜单名称</label>
 
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" name="name">
+                                <input type="text" class="form-control" name="name" value="{$data.name}">
                             </div>
                         </div>
                         <div class="hr-line-dashed"></div>
@@ -56,7 +56,7 @@
                             <label class="col-sm-2 control-label">模块名称</label>
 
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" name="module">
+                                <input type="text" class="form-control" name="module" value="{$data.module}">
                             </div>
                         </div>
                         <div class="hr-line-dashed"></div>
@@ -64,7 +64,7 @@
                             <label class="col-sm-2 control-label">方法名称</label>
 
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" name="action">
+                                <input type="text" class="form-control" name="action" value="{$data.action}">
                             </div>
                         </div>
                         <div class="hr-line-dashed"></div>
@@ -72,7 +72,7 @@
                             <label class="col-sm-2 control-label">附加参数</label>
 
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" name="parameter">
+                                <input type="text" class="form-control" name="parameter" value="{$data.parameter}">
                             </div>
                         </div>
                         <div class="hr-line-dashed"></div>
@@ -80,7 +80,7 @@
                             <label class="col-sm-2 control-label">菜单排序</label>
 
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" name="sort">
+                                <input type="text" class="form-control" name="sort" value="{$data.sort}">
                             </div>
                         </div>
                         <div class="hr-line-dashed"></div>
@@ -92,19 +92,20 @@
                             <div class="col-sm-10">
                                 <div class="radio">
                                     <label>
-                                        <input type="radio" checked="" value="1" id="optionsRadios1"
-                                               name="status">显示</label>
+                                        <input type="radio" value="1" id="optionsRadios1"
+                                               name="status" <if condition="$data.status eq 1">checked="checked"</if>>显示</label>
                                 </div>
                                 <div class="radio">
                                     <label>
-                                        <input type="radio" value="0" id="optionsRadios2" name="status">隐藏</label>
+                                        <input type="radio" value="0" id="optionsRadios2" name="status" <if condition="$data.status eq 0">checked="checked"</if>>隐藏</label>
                                 </div>
                             </div>
                         </div>
                         <div class="hr-line-dashed"></div>
                         <div class="form-group">
                             <div class="col-sm-4 col-sm-offset-2">
-                                <button class="btn btn-primary" type="button" id="button-add">保存内容</button>
+                                <input name="id" type="hidden" value="{$data.id}"/>
+                                <button class="btn btn-primary" type="button" id="button-add">修改内容</button>
                                 <button class="btn btn-white" type="button" id="button-cancal">取消返回</button>
                             </div>
                         </div>
@@ -135,19 +136,19 @@
         })
         console.log(postData);
         //将获取到德数据post给服务器
-        url = '{:U("Menu/add")}';
-        $.post(url,postData,function (result) {
-            if(result.status == 1){
+        url = '{:U("Menu/edit")}';
+        $.post(url, postData, function (result) {
+            if (result.status == 1) {
                 //成功
-                return dialog.success(result.message,result.url);
-            }else if(result.status == 0){
+                return dialog.success(result.message, result.url);
+            } else if (result.status == 0) {
                 //失败
                 return dialog.error(result.message);
             }
-        },"JSON");
+        }, "JSON");
     });
     $("#button-cancal").click(function () {
-       window.location.href = '{:U("Menu/index")}'
+        window.location.href = '{:U("Menu/index")}'
     })
 </script>
 </body>
