--- a/App/Admin/View/Department/departmentList.html
+++ b/App/Admin/View/Department/departmentList.html
@@ -26,97 +26,38 @@
         <div class="col-sm-3">
             <div class="ibox float-e-margins">
                 <div class="ibox-title">
-                    <h5>JSON数据</h5>
+                    <h5>{$type}</h5>
+
                     <div class="ibox-tools">
+                        <button id="addParent" class="btn btn-success btn-circle" onclick="return false;" type="button"><a style="color: white">顶增</a>
+                        </button>
+                        <button id="addLeaf" class="btn btn-info btn-circle" onclick="return false;" type="button"><a style="color: white">子增</a>
+                        </button>
+                        <button id="remove" onclick="return false;"   class="btn btn-danger btn-circle" type="button"><a style="color: white">删</a>
+                        </button>
+                        <button id="edit" onclick="return false;" class="btn btn-default btn-circle" type="button"><a style="color: white">改</a>
+                        </button>
                         <a class="collapse-link">
                             <i class="fa fa-chevron-up"></i>
                         </a>
 
                     </div>
+
                 </div>
+
                 <div class="ibox-content">
                     <div id="treeDemo" class="ztree"></div>
                 </div>
             </div>
         </div>
         <div class="col-sm-9 animated fadeInRight">
-
-            <div class="ibox-content">
-                <div class="row">
-                    <div class="">
-                        <a href="{:U('Menu/add')}" class="btn btn-primary ">新增菜单</a>
-                    </div>
-                </div>
-                <div class="table-responsive">
-                    <table class="table table-striped">
-                        <thead>
-                        <tr>
-
-                            <th></th>
-                            <th>序号</th>
-                            <th>名称</th>
-                            <th>模块名</th>
-                            <th>方法名</th>
-                            <th>显示</th>
-                            <th>排序</th>
-                            <th>操作</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-
-
-                        <foreach name='cate' item='v'>
-                            <tr>
-                                <td>
-                                    <!--<input type="checkbox" class="i-checks" name="input[]">-->
-                                </td>
-                                <td>{$v.id}</td>
-                                <td>{$v.delimiter}
-                                    <if condition="$v['pid'] neq 0">├─</if>
-                                    {$v.name}
-                                </td>
-                                <td>{$v.module}</td>
-                                <td>{$v.action}</td>
-                                <td>
-                                    <if condition="$v['status']"><span class="btn btn-primary btn-sm">是</span>
-                                        <else/>
-                                        <span class="btn btn-default btn-sm">否</span></if>
-                                </td>
-
-                                <td><input type="text" name="sortlist[{$v.id}]" value="{$v.sort}" id="sortlist"
-                                           size="5" class="xyh-form-control"/></td>
-                                <td>
-                                    <if condition="in_array($v['id'],array(0))">
-                                        <a class="btn btn-default btn-rounded">增加子菜单</a>
-                                        <a class="btn btn-default btn-rounded">编辑菜单</a>
-                                        <a class="btn btn-default btn-rounded">删除菜单</a>
-                                        <elseif condition="$v['pid'] eq 0"/>
-                                        <a href="{:U('add',array('pid' => $v['id']))}"
-                                           class="btn btn-primary btn-rounded">增加子菜单</a>
-                                        <a class="btn btn-default btn-rounded">编辑菜单</a>
-                                        <a class="btn btn-default btn-rounded">删除菜单</a>
-                                        <else/>
-                                        <a href="{:U('add',array('pid' => $v['id']))}"
-                                           class="btn btn-primary btn-rounded">添加子菜单</a>
-                                        <a href="{:U('edit',array('id' => $v['id']))}"
-                                           class="btn btn-primary btn-rounded">编辑菜单</a>
-                                        <a href="javascript:void(0)"
-                                           attr-message="删除"
-                                           class="btn btn-primary btn-rounded" id="zzcms-delete"
-                                           attr-id="{$v['id']}">删除菜单
-                                        </a>
-                                    </if>
-                                </td>
-                            </tr>
-                        </foreach>
-                        </tbody>
-                    </table>
-                    <div class="text-center">
-                        {$page}
-                    </div>
-                </div>
-
+            <!--右侧部分开始-->
+            <div class="row J_mainContent" id="content-main">
+                <iframe class="J_iframe" name="iframe0" width="100%" height="800px" src="{:U('/index/info')}"
+                        frameborder="0"
+                        data-id="index_v1.html" seamless></iframe>
             </div>
+            <!--右侧部分结束-->
         </div>
     </div>
 </div>
@@ -130,95 +71,60 @@
 <SCRIPT type="text/javascript">
     var setting = {
         view: {
-            addHoverDom: addHoverDom,
-            removeHoverDom: removeHoverDom,
             selectedMulti: false
         },
-        edit: {
-            enable: true,
-            editNameSelectAll: true,
-            showRemoveBtn: showRemoveBtn,
-            showRenameBtn: showRenameBtn
-        },
         data: {
+            keep: {
+                parent:true,
+                leaf:true
+            },
             simpleData: {
                 enable: true
             }
         },
         callback: {
             beforeDrag: beforeDrag,
-            beforeEditName: beforeEditName,
             beforeRemove: beforeRemove,
             beforeRename: beforeRename,
-            onRemove: onRemove,
-            onRename: onRename
+            onRemove: onRemove
         }
     };
 
     var zNodes =[
-        { "id":1, "name":"Google CN", "url":"http://g.cn",open:true},
-        { id:11, pId:1, name:"叶子节点 1--1",url:"{:U(Menu/index)}"},
-        { id:12, pId:1, name:"叶子节点 1-2"},
-        { id:13, pId:1, name:"叶子节点 1-3"},
-        { id:2, pId:0, name:"父节点 2", open:true,url:"{:U(Menu/index)}"},
-        { id:21, pId:2, name:"叶子节点 2-1",url:"{:U(Menu/index)}"},
-        { id:22, pId:2, name:"叶子节点 2-2",url:"{:U(Menu/index)}"},
-        { id:23, pId:2, name:"叶子节点 2-3"},
-        { id:3, pId:0, name:"父节点 3", open:true,url:"{:U(Menu/index)}"},
-        { id:31, pId:3, name:"叶子节点 3-1"},
-        { id:32, pId:3, name:"叶子节点 3-2"},
-        { id:33, pId:3, name:"叶子节点 3-3"}
+        { id:1, pId:0, name:"父节点 1", open:true,target:"iframe0", url: "http://www.treejs.cn/"},
+        { id:11, pId:1, name:"叶子节点 1-1",target:"iframe0", url: "http://www.treejs.cn/"},
+        { id:12, pId:1, name:"叶子节点 1-2",target:"iframe0", url: "http://www.treejs.cn/"},
+        { id:13, pId:1, name:"叶子节点 1-3",target:"iframe0", url: "http://www.treejs.cn/"},
+        { id:2, pId:0, name:"父节点 2", open:true,target:"iframe0", url: "http://www.treejs.cn/"},
+        { id:21, pId:2, name:"叶子节点 2-1",target:"iframe0", url: "http://www.treejs.cn/"},
+        { id:22, pId:2, name:"叶子节点 2-2",target:"iframe0", url: "http://www.treejs.cn/"},
+        { id:23, pId:2, name:"叶子节点 2-3",target:"iframe0", url: "http://www.treejs.cn/"},
+        { id:3, pId:0, name:"父节点 3", open:true,target:"iframe0", url: "http://www.treejs.cn/"},
+        { id:31, pId:3, name:"叶子节点 3-1",target:"iframe0", url: "http://www.treejs.cn/"},
+        { id:32, pId:3, name:"叶子节点 3-2",target:"iframe0", url: "http://www.treejs.cn/"},
+        { id:33, pId:3, name:"叶子节点 3-3",target:"iframe0", url: "http://www.treejs.cn/"}
     ];
-    console.log(zNodes);
+
     var log, className = "dark";
     function beforeDrag(treeId, treeNodes) {
-        return false;
-    }
-    function beforeEditName(treeId, treeNode) {
-        className = (className === "dark" ? "":"dark");
-        showLog("[ "+getTime()+" beforeEditName ]&nbsp;&nbsp;&nbsp;&nbsp; " + treeNode.name);
-        var zTree = $.fn.zTree.getZTreeObj("treeDemo");
-        zTree.selectNode(treeNode);
-        setTimeout(function() {
-            if (confirm("进入节点 -- " + treeNode.name + " 的编辑状态吗？")) {
-                setTimeout(function() {
-                    zTree.editName(treeNode);
-                }, 0);
-            }
-        }, 0);
         return false;
     }
     function beforeRemove(treeId, treeNode) {
         className = (className === "dark" ? "":"dark");
         showLog("[ "+getTime()+" beforeRemove ]&nbsp;&nbsp;&nbsp;&nbsp; " + treeNode.name);
-        var zTree = $.fn.zTree.getZTreeObj("treeDemo");
-        zTree.selectNode(treeNode);
         return confirm("确认删除 节点 -- " + treeNode.name + " 吗？");
     }
     function onRemove(e, treeId, treeNode) {
         showLog("[ "+getTime()+" onRemove ]&nbsp;&nbsp;&nbsp;&nbsp; " + treeNode.name);
     }
-    function beforeRename(treeId, treeNode, newName, isCancel) {
-        className = (className === "dark" ? "":"dark");
-        showLog((isCancel ? "<span style='color:red'>":"") + "[ "+getTime()+" beforeRename ]&nbsp;&nbsp;&nbsp;&nbsp; " + treeNode.name + (isCancel ? "</span>":""));
+    function beforeRename(treeId, treeNode, newName) {
         if (newName.length == 0) {
-            setTimeout(function() {
-                var zTree = $.fn.zTree.getZTreeObj("treeDemo");
-                zTree.cancelEditName();
-                alert("节点名称不能为空.");
-            }, 0);
+            alert("节点名称不能为空.");
+            var zTree = $.fn.zTree.getZTreeObj("treeDemo");
+            setTimeout(function(){zTree.editName(treeNode)}, 10);
             return false;
         }
         return true;
-    }
-    function onRename(e, treeId, treeNode, isCancel) {
-        showLog((isCancel ? "<span style='color:red'>":"") + "[ "+getTime()+" onRename ]&nbsp;&nbsp;&nbsp;&nbsp; " + treeNode.name + (isCancel ? "</span>":""));
-    }
-    function showRemoveBtn(treeId, treeNode) {
-        return !treeNode.isFirstNode;
-    }
-    function showRenameBtn(treeId, treeNode) {
-        return !treeNode.isLastNode;
     }
     function showLog(str) {
         if (!log) log = $("#log");
@@ -237,30 +143,63 @@
     }
 
     var newCount = 1;
-    function addHoverDom(treeId, treeNode) {
-        var sObj = $("#" + treeNode.tId + "_span");
-        if (treeNode.editNameFlag || $("#addBtn_"+treeNode.tId).length>0) return;
-        var addStr = "<span class='button add' id='addBtn_" + treeNode.tId
-                + "' title='add node' onfocus='this.blur();'></span>";
-        sObj.after(addStr);
-        var btn = $("#addBtn_"+treeNode.tId);
-        if (btn) btn.bind("click", function(){
-            var zTree = $.fn.zTree.getZTreeObj("treeDemo");
-            zTree.addNodes(treeNode, {id:(100 + newCount), pId:treeNode.id, name:"new node" + (newCount++)});
-            return false;
-        });
-    };
-    function removeHoverDom(treeId, treeNode) {
-        $("#addBtn_"+treeNode.tId).unbind().remove();
-    };
-    function selectAll() {
-        var zTree = $.fn.zTree.getZTreeObj("treeDemo");
-        zTree.setting.edit.editNameSelectAll =  $("#selectAll").attr("checked");
-    }
+    function add(e) {
+        var zTree = $.fn.zTree.getZTreeObj("treeDemo"),
+                isParent = e.data.isParent,
+                nodes = zTree.getSelectedNodes(),
+                treeNode = nodes[0];
+        isTop = e.data.isTop;
 
-    $(document).ready(function(){
+        if (!isTop) {
+            treeNode = zTree.addNodes(treeNode, {id:(100 + newCount), pId:treeNode.id, isParent:isParent, name:"new node" + (newCount++)});
+        } else {
+            treeNode = zTree.addNodes(null, {id:(100 + newCount), pId:0, isParent:isParent, name:"new node" + (newCount++)});
+        }
+        if (treeNode) {
+            zTree.editName(treeNode[0]);
+        } else {
+            alert("叶子节点被锁定，无法增加子节点");
+        }
+    };
+    function edit() {
+        var zTree = $.fn.zTree.getZTreeObj("treeDemo"),
+                nodes = zTree.getSelectedNodes(),
+                treeNode = nodes[0];
+        if (nodes.length == 0) {
+            alert("请先选择一个节点");
+            return;
+        }
+        zTree.editName(treeNode);
+    };
+    function remove(e) {
+        var zTree = $.fn.zTree.getZTreeObj("treeDemo"),
+                nodes = zTree.getSelectedNodes(),
+                treeNode = nodes[0];
+        if (nodes.length == 0) {
+            alert("请先选择一个节点");
+            return;
+        }
+        var callbackFlag = $("#callbackTrigger").attr("checked");
+        zTree.removeNode(treeNode, callbackFlag);
+    };
+    function clearChildren(e) {
+        var zTree = $.fn.zTree.getZTreeObj("treeDemo"),
+                nodes = zTree.getSelectedNodes(),
+                treeNode = nodes[0];
+        if (nodes.length == 0 || !nodes[0].isParent) {
+            alert("请先选择一个父节点");
+            return;
+        }
+        zTree.removeChildNodes(treeNode);
+    };
+
+    $(document).ready(function () {
         $.fn.zTree.init($("#treeDemo"), setting, zNodes);
-        $("#selectAll").bind("click", selectAll);
+        $("#addParent").bind("click", {isParent:true,isTop:true}, add);
+        $("#addLeaf").bind("click", {isParent:true}, add);
+        $("#edit").bind("click", edit);
+        $("#remove").bind("click", remove);
+        $("#clearChildren").bind("click", clearChildren);
     });
 </SCRIPT>
 </body>
